<resources>

    <!-- MENU DRAWER ELEMENTS -->

    <string name="app_name">XL-STORE</string>
    <string name="title_home">Home</string>
    <string name="title_posts">Posts</string>
    <string name="title_advertisements">Advertisements</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_products">Products</string>
    <string name="title_trades">Trades</string>
    <string name="title_companies">Companies</string>
    <string name="title_followers">Followers</string>
    <string name="title_following">Following</string>
    <string name="title_bills">Bills and Carts</string>
    <string name="title_comments">Comments</string>
    <string name="title_replies">Replies</string>
    <string name="title_interess">Interests</string>
    <string name="title_likes">Likes</string>
    <string name="title_dislikes">Dislikes</string>
    <string name="title_categories">Categories</string>
    <string name="action_settings">Settings</string>
    <string name="title_logout">Log Out</string>

    <!-- ACTION MENU DRAWER -->

    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>

    <!-- PRODUCT MENU -->

    <string name="product_menu_title">Product Menu</string>
    <string name="product_interest">Interest</string>
    <string name="product_like">Like</string>
    <string name="product_dislike">Dislike</string>
    <string name="product_trade">Trade</string>

    <!-- GENERAL -->

    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Here</string>

    <!-- POSTS, COMMENTS & REPLIES -->

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="reply">Reply</string>
    <string name="report">Report</string>
    <string name="comment_menu_title">Comment Menu</string>
</resources>
